--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
-<script src="sync_await.js"></script>
+<!-- <script src="sync_await.js"></script> -->
+<script src="clases.js"></script>
 </body>
 </html>
