--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
 <!-- <script src="sync_await.js"></script> -->
-<script src="clases.js"></script>
+<!-- <script src="clases.js"></script> -->
+<!-- <script src="cart_example.js"></script> -->
 </body>
 </html>
