--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <!-- <script src="sync_await.js"></script> -->
 <!-- <script src="clases.js"></script> -->
 <!-- <script src="cart_example.js"></script> -->
+<script src="prototypes.js"></script>
 </body>
 </html>
